[tool.poetry]
name = "se-3-transformer"
version = "0.1.0"
description = ""
authors = ["Luke Martin <lukechile@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
wandb = "^0.16.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
